--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,11 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+
+# Ignore other files
 .prettierignore
+/assets/fonts
+/design
+README-template.md
+README.md
+style-guide.md
